# velodex

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Cargo.toml  README.md  dist-workspace.toml  mise.toml  proposal.md  pyproject.toml
crates/peryx/: Cargo.toml
crates/peryx-core/: Cargo.toml
crates/peryx-core/src/: ecosystem.rs  lexicon.rs  lib.rs  path.rs  view.rs
crates/peryx-driver/: Cargo.toml
crates/peryx-driver/src/: access.rs  conditional.rs  discovery.rs  download.rs  lib.rs  range.rs  rate_limit.rs  serving.rs  users.rs
crates/peryx-driver/src/jobs/: metrics.rs  mod.rs  scheduler.rs  tests.rs  timer.rs
crates/peryx-driver/src/state/: app.rs  build.rs  caches.rs  describe.rs  mod.rs  registry.rs
crates/peryx-driver/src/tests/: access_tests.rs  conditional_tests.rs  mod.rs  range_tests.rs  state_tests.rs  user_tests.rs
crates/peryx-ecosystem-oci/: Cargo.toml
crates/peryx-ecosystem-oci/benches/: blob_serve.rs  manifest_by_digest.rs  operations.rs  tags_list.rs  version_check.rs
crates/peryx-ecosystem-oci/benches/support/: registry.rs
crates/peryx-ecosystem-oci/src/: error.rs  lib.rs  mirror.rs  name.rs  openapi.rs  quota.rs  search_oci.rs  settings.rs  store.rs  upstream.rs  web.rs
crates/peryx-ecosystem-oci/src/registry/: auth.rs  blobs.rs  discovery.rs  manifests.rs  mod.rs  uploads.rs
crates/peryx-ecosystem-oci/src/store/: descriptors.rs
crates/peryx-ecosystem-oci/src/tests/: bearer_tests.rs  conformance_tests.rs  metrics_tests.rs  mirror_tests.rs  mod.rs  negotiate_tests.rs  policy_tests.rs  push_tests.rs  quota_tests.rs  scope_tests.rs  search_tests.rs  serve_tests.rs  virtual_tests.rs  web_tests.rs  webhooks_tests.rs
crates/peryx-ecosystem-oci/tests/: blob_delete_memory.rs
crates/peryx-ecosystem-pypi/: Cargo.toml
crates/peryx-ecosystem-pypi/benches/: name_version.rs  parse.rs  parse_index_html.rs  render.rs  serve.rs
crates/peryx-ecosystem-pypi/benches/support/: detail.rs  index.rs  metadata.rs
crates/peryx-ecosystem-pypi/examples/: catalog_million.rs
crates/peryx-ecosystem-pypi/src/: admin.rs  attestation.rs  catalog.rs  changelog.rs  classifier.rs  contact.rs  filename.rs  html.rs  import.rs  legacy_json.rs  lib.rs  license.rs  metadata.rs  name.rs  policy.rs  requirement.rs  retention.rs  search_pypi.rs  simple_client.rs  upload.rs  version.rs
crates/peryx-ecosystem-pypi/src/archive/: mod.rs  sdist.rs
crates/peryx-ecosystem-pypi/src/cache/: download.rs  fetch.rs  metadata.rs  mod.rs  mutate.rs  page_stream.rs  resolve.rs
crates/peryx-ecosystem-pypi/src/classifier/: data.rs
crates/peryx-ecosystem-pypi/src/openapi/: files.rs  inspect.rs  legacy.rs  mod.rs  publish.rs  shared.rs  simple.rs
crates/peryx-ecosystem-pypi/src/serving/: changelog.rs  get.rs  inspect.rs  mod.rs  mutate.rs  post.rs  response.rs  upload_form.rs  web.rs
crates/peryx-http/: Cargo.toml
crates/peryx-http/src/: lib.rs  path_safety.rs  router.rs
crates/peryx-identity/: Cargo.toml
crates/peryx-identity/src/: acl.rs  lib.rs  oidc.rs  password.rs  token.rs  trusted_publisher.rs  user.rs
crates/peryx-index/: Cargo.toml
crates/peryx-index/src/: lib.rs  resolve.rs  serving.rs
crates/peryx-policy/: Cargo.toml
crates/peryx-policy/benches/: retention.rs
crates/peryx-policy/src/: lib.rs  retention.rs
crates/peryx-policy/tests/: policy.rs  retention.rs
crates/peryx-replication/: Cargo.toml
crates/peryx-replication/benches/: operation_envelope.rs
crates/peryx-replication/src/: envelope.rs  envelope_tests.rs  http.rs  http_tests.rs  lib.rs  protocol.rs  replica.rs  tests.rs
crates/peryx-search/: Cargo.toml
crates/peryx-search/src/: access.rs  context.rs  engine.rs  error.rs  indexer.rs  lib.rs  params.rs  response.rs
crates/peryx-storage/: Cargo.toml
crates/peryx-storage/tests/: blob_backend.rs  s3_backend.rs
crates/peryx-web/: Cargo.toml
crates/peryx-web/src/: lib.rs  markdown.rs  style.rs  tests.rs  url.rs
crates/peryx/src/: lib.rs  main.rs  replication.rs  server.rs
crates/peryx/tests/: e2e.rs
crates/velodex/: Cargo.toml
crates/velodex-bench/: Cargo.toml
crates/velodex-bench/benches/: components.rs
crates/velodex-bench/src/: compare.rs  main.rs  packages.rs  report.rs  servers.rs  stats.rs  usage.rs  workloads.rs
crates/velodex-core/: Cargo.toml
crates/velodex-core/src/: lib.rs
crates/velodex-ecosystem-oci/: Cargo.toml
crates/velodex-ecosystem-oci/benches/: operations.rs
crates/velodex-ecosystem-oci/src/: discovery.rs  error.rs  lib.rs  mirror.rs  name.rs  search_oci.rs  store.rs  upstream.rs
crates/velodex-ecosystem-pypi/: Cargo.toml
crates/velodex-ecosystem-pypi/benches/: operations.rs  rate_limit.rs
crates/velodex-ecosystem-pypi/src/: cache.rs  discovery.rs  legacy_json.rs  lib.rs  policy.rs  search_pypi.rs  serving.rs  stream.rs
crates/velodex-format/: Cargo.toml
crates/velodex-format/src/: ecosystem.rs  lib.rs
crates/velodex-http/: Cargo.toml
crates/velodex-http/benches/: rate_limit.rs
crates/velodex-http/src/: api.rs  archive.rs  body.rs  cache.rs  discovery.rs  download.rs  handlers.rs  lib.rs  metrics.rs  path_safety.rs  policy.rs  rate_limit.rs  router.rs  search.rs  search_pypi.rs  security.rs  serving.rs  state.rs  stream.rs  upload.rs  webhook.rs
crates/velodex-policy/: Cargo.toml
crates/velodex-policy/src/: lib.rs  tests.rs
crates/velodex-storage/: Cargo.toml
crates/velodex-storage/src/: blob.rs  lib.rs  meta.rs
crates/velodex-upstream/: Cargo.toml
crates/velodex-upstream/src/: client.rs  lib.rs
crates/velodex-web/: Cargo.toml
crates/velodex-web/src/: data.rs  lib.rs  markdown.rs  model.rs  pages.rs  ssr.rs  style.rs  tests.rs  url.rs
crates/velodex/src/: app.rs  cli.rs  config.rs  lib.rs  logging.rs  main.rs  mirror.rs  operator.rs  prefetch.rs  server.rs
crates/velodex/tests/: e2e.rs
crates/velox/: Cargo.toml
crates/velox-http/: Cargo.toml
crates/velox-http/src/: api.rs  cache.rs  handlers.rs  lib.rs  router.rs  state.rs
crates/velox/src/: app.rs  cli.rs  config.rs  lib.rs  main.rs  server.rs
crates/velox/tests/: e2e.rs
(+765 files in other folders)
