[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.96"
license = "MIT"
repository = "https://github.com/tox-dev/velox"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
velox-core = { path = "crates/velox-core" }
velox-storage = { path = "crates/velox-storage" }
velox-upstream = { path = "crates/velox-upstream" }
velox-http = { path = "crates/velox-http" }
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
http = "1"
http-body-util = "0.1"
sha2 = "0.11"
tempfile = "3"
redb = "4.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "fs"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "rustls-native-certs", "http2", "stream", "gzip"] }
bytes = "1"
base64 = "0.22"
url = "2"
wiremock = "0.6"
clap = { version = "4.6", features = ["derive", "env", "wrap_help"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pep440_rs = "0.7"
tl = "0.7"
toml = "1.1"
insta = "1"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
utoipa = "5.5"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

[profile.release]
strip = true
lto = "fat"
