[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.96"
license = "MIT"
repository = "https://github.com/tox-dev/peryx"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
peryx-core = { path = "crates/peryx-core" }
peryx-driver = { path = "crates/peryx-driver" }
peryx-events = { path = "crates/peryx-events" }
peryx-index = { path = "crates/peryx-index" }
peryx-search = { path = "crates/peryx-search" }
peryx-ecosystem-pypi = { path = "crates/peryx-ecosystem-pypi", default-features = false }
peryx-ecosystem-oci = { path = "crates/peryx-ecosystem-oci" }
peryx-policy = { path = "crates/peryx-policy" }
peryx-identity = { path = "crates/peryx-identity" }
peryx-replication = { path = "crates/peryx-replication" }
peryx-storage = { path = "crates/peryx-storage" }
peryx-upstream = { path = "crates/peryx-upstream" }
peryx-http = { path = "crates/peryx-http" }
peryx-web = { path = "crates/peryx-web" }
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["trace"] }
http = "1"
http-body-util = "0.1"
ipnet = { version = "2.12", features = ["serde"] }
sha2 = "0.11"
blake2 = "0.10"
md-5 = "0.10"
csv = "1"
dashmap = "6.2"
tempfile = "3"
mimalloc = "0.1"
redb = "4.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "fs", "process"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider", "rustls-native-certs", "http2", "stream", "gzip"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
rustls-acme = { version = "0.15", default-features = false, features = ["ring", "axum", "tls12", "webpki-roots"] }
bytes = "1"
httpdate = "1"
futures-core = "0.3"
futures-util = "0.3"
fs4 = "0.13"
getrandom = "0.4"
moka = { version = "0.12", features = ["sync"] }
parking_lot = "0.12"
tokio-util = { version = "0.7", features = ["io"] }
base64 = "0.22"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
url = "2"
wiremock = "0.6"
rstest = "0.26"
clap = { version = "4.6", features = ["derive", "env", "wrap_help"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-normalization = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
pep440_rs = "0.7"
pep508_rs = "0.9"
spdx = "0.13"
email_address = { version = "0.2", default-features = false }
tantivy = "0.26"
tl = "0.7"
html5ever = "0.39"
toml = "1.1"
insta = "1"
thiserror = "2.0"
async-trait = "0.1"
mockall = "0.15"
anyhow = "1.0"
tracing = "0.1"
sysinfo = "0.39"
utoipa = "5.5"
leptos = "0.8"
leptos_axum = "0.8"
leptos_meta = "0.8"
leptos_router = "0.8"
wasm-bindgen = "0.2"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
rst_parser = "0.4"
rst_renderer = "0.4"
rustix = { version = "1", features = ["process"] }
ammonia = "4.1"
regex = "1"
zip = { version = "8", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"
gloo-net = "0.7"
console_error_panic_hook = "0.1"
send_wrapper = "0.6"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "DomStringMap", "Navigator", "Clipboard", "MediaQueryList", "Storage"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["formatting", "parsing"] }
criterion = { package = "codspeed-criterion-compat", version = "5.0", default-features = false }
stats_alloc = "0.1.10"
statrs = "0.18"
hdrhistogram = { version = "7.5", default-features = false }
uv-netrc = "0.0.62"

[profile.release]
strip = true
lto = "fat"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# cargo-leptos builds the web UI's browser bundle: `cargo leptos build --release` compiles
# peryx-web to wasm and writes ui/pkg/, which the server serves at /pkg. The server itself renders
# pages without the bundle, so this step is only needed for the interactive UI.
[[workspace.metadata.leptos]]
name = "peryx"
bin-package = "peryx"
lib-package = "peryx-web"
lib-features = ["hydrate"]
lib-default-features = false
output-name = "peryx_web"
site-root = "ui"
site-pkg-dir = "pkg"
