[build-system]
requires = ["maturin<2,>=1.14.1"]
build-backend = "maturin"

[project]
name = "velodex"
description = "A blazing-fast artifact server: caching proxy, hosted store, and virtual index — PyPI today"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["pypi", "index", "mirror", "cache", "packaging", "artifact-server"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Software Distribution",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://velodex.readthedocs.io/"
Source = "https://github.com/tox-dev/velodex"
Issues = "https://github.com/tox-dev/velodex/issues"

[tool.maturin]
# The wheel carries the compiled `velodex` binary as a console script; there are no Python
# bindings, so one wheel per platform serves every CPython and PyPy version.
bindings = "bin"
manifest-path = "crates/velodex/Cargo.toml"
