[package]
name = "peryx-driver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The seam an ecosystem plugs into: the serving traits a driver implements, and the process state and helpers it builds on."

[dependencies]
peryx-core.workspace = true
peryx-events.workspace = true
peryx-identity.workspace = true
peryx-index.workspace = true
peryx-policy.workspace = true
peryx-search.workspace = true
peryx-storage.workspace = true
peryx-upstream.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["multipart"] }
toml.workspace = true
bytes.workspace = true
futures-util.workspace = true
httpdate.workspace = true
ipnet.workspace = true
moka = { workspace = true }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "time", "fs"] }
tokio-util = { workspace = true, features = ["rt"] }
thiserror.workspace = true
tracing.workspace = true
utoipa.workspace = true
url.workspace = true

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
