[package]
name = "peryx-ecosystem-oci"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The OCI/Docker registry driver for peryx: the distribution-spec /v2/ API over the content-addressed blob store."

[dependencies]
peryx-core.workspace = true
peryx-driver.workspace = true
peryx-events.workspace = true
peryx-index.workspace = true
peryx-search.workspace = true
peryx-storage.workspace = true
peryx-identity.workspace = true
peryx-policy.workspace = true
peryx-upstream.workspace = true
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
futures-util.workspace = true
getrandom.workspace = true
http.workspace = true
http-body-util.workspace = true
moka.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde = { workspace = true, features = ["derive"] }
url.workspace = true
serde_json.workspace = true
toml.workspace = true
utoipa.workspace = true
tokio = { workspace = true, features = ["sync", "fs", "io-util"] }
tokio-util = { workspace = true, features = ["io"] }

[dev-dependencies]
peryx-http.workspace = true
peryx-upstream.workspace = true
base64.workspace = true
flate2.workspace = true
tar.workspace = true
http.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
tempfile.workspace = true
wiremock.workspace = true
criterion = { workspace = true, features = ["async_tokio"] }
rstest.workspace = true

[[bench]]
name = "operations"
harness = false

[lints]
workspace = true
