[package]
name = "peryx-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP layer for peryx: read-through simple-index serving and blob download."

[dependencies]
peryx-core.workspace = true
peryx-driver.workspace = true
peryx-events.workspace = true
peryx-index.workspace = true
peryx-identity.workspace = true
peryx-search.workspace = true
peryx-storage.workspace = true
axum = { workspace = true, features = ["multipart"] }
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "fs"] }

[dev-dependencies]
async-trait.workspace = true
base64.workspace = true
peryx-policy.workspace = true
peryx-upstream.workspace = true
rstest.workspace = true
tokio.workspace = true
toml.workspace = true
tower = { workspace = true, features = ["util"] }
http-body-util.workspace = true
mockall.workspace = true
wiremock.workspace = true
tracing-subscriber.workspace = true
redb.workspace = true
tempfile.workspace = true

[lints]
workspace = true
