[package]
name = "peryx-identity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Identity and access for peryx: principals, per-index grants, and the tokens that carry them."

[dependencies]
base64.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true
uuid.workspace = true

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true
