[package]
name = "peryx-identity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Identity and access for peryx: principals, per-index grants, and the tokens that carry them."

[dependencies]
async-trait.workspace = true
base64.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
unicode-normalization.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
rstest.workspace = true
wiremock.workspace = true

[lints]
workspace = true
