[package]
name = "peryx-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The index model and role engine for peryx: what a cached, hosted, or virtual index is, and how a request resolves against one."

[dependencies]
peryx-core.workspace = true
peryx-identity.workspace = true
peryx-policy.workspace = true
peryx-upstream.workspace = true
bytes.workspace = true
dashmap.workspace = true
moka = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
hdrhistogram.workspace = true
stats_alloc.workspace = true

[[bench]]
name = "route_resolver"
harness = false

[lints]
workspace = true
