[package]
name = "peryx-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Ecosystem-neutral index policy engine for peryx: name allow/deny, size limits, and a rule seam."

[dependencies]
serde.workspace = true

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true

[[bench]]
name = "retention"
harness = false

[lints]
workspace = true
