[package]
name = "peryx-replication"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Primary/replica replication protocol for peryx, built on the storage journal."

[dependencies]
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
futures-util.workspace = true
peryx-storage.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
tokio-util.workspace = true

[dev-dependencies]
http-body-util.workspace = true
redb.workspace = true
tempfile.workspace = true
tokio.workspace = true
tower = { workspace = true, features = ["util"] }

[lints]
workspace = true
