[package]
name = "velodex-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Comparative benchmark harness: velodex against direct PyPI and competing index servers."
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
serde.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true

# The wall-clock workloads live in the binary; the component benchmarks live beside them and share
# the same fixtures, so CodSpeed's instrumented micro-benchmarks are a subset of one suite. They
# call the real crate functions rather than re-implementing them.
[dev-dependencies]
criterion = { workspace = true }
url.workspace = true
velodex-core.workspace = true
velodex-http.workspace = true
velodex-storage.workspace = true

[[bench]]
name = "components"
harness = false

[lints]
workspace = true
