[package]
name = "velodex-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core domain logic for velodex: project names, versions, index resolution."

[dependencies]
serde.workspace = true
serde_json.workspace = true
pep440_rs.workspace = true
tl.workspace = true
url.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
