[package]
name = "velodex-ecosystem-oci"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The OCI/Docker registry driver for velodex: the distribution-spec /v2/ API over the content-addressed blob store."

[dependencies]
velodex-http.workspace = true
velodex-format.workspace = true
velodex-storage.workspace = true
velodex-identity.workspace = true
velodex-policy.workspace = true
velodex-upstream.workspace = true
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
futures-util.workspace = true
http.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde = { workspace = true, features = ["derive"] }
url.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "fs", "io-util"] }
tokio-util = { workspace = true, features = ["io"] }

[dev-dependencies]
velodex-upstream.workspace = true
base64.workspace = true
flate2.workspace = true
tar.workspace = true
http.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
http-body-util.workspace = true
tempfile.workspace = true
wiremock.workspace = true
criterion = { workspace = true, features = ["async_tokio"] }
rstest.workspace = true

[[bench]]
name = "operations"
harness = false

[lints]
workspace = true
