[package]
name = "velodex-ecosystem-pypi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The PyPI ecosystem driver for velodex: names, versions, the simple repository API, and its serving layer."

[features]
# The serving layer (cache/stream/archive/discovery/upload/search/policy/HTTP driver) is on by
# default. Turning it off (`--no-default-features`) leaves only the ecosystem format core — names,
# versions, filenames, the Simple-API document model — with no HTTP/async/storage dependencies, so a
# wasm or other light consumer can use the format types without pulling the server stack.
default = ["serving"]
serving = [
  "dep:velodex-http",
  "dep:velodex-policy",
  "dep:velodex-identity",
  "dep:velodex-storage",
  "dep:velodex-upstream",
  "dep:axum",
  "dep:tower-http",
  "dep:http",
  "dep:bytes",
  "dep:base64",
  "dep:blake2",
  "dep:csv",
  "dep:reqwest",
  "dep:rustls",
  "dep:tantivy",
  "dep:thiserror",
  "dep:async-trait",
  "dep:tracing",
  "dep:tokio",
  "dep:tokio-util",
  "dep:futures-util",
  "dep:moka",
  "dep:utoipa",
  "dep:zip",
  "dep:tar",
  "dep:flate2",
  "dep:tempfile",
  "dep:time",
]

[dependencies]
# Format core (always compiled).
velodex-format.workspace = true
serde.workspace = true
serde_json.workspace = true
pep440_rs.workspace = true
tl.workspace = true
url.workspace = true
sha2.workspace = true

# Serving layer (enabled by the `serving` feature).
velodex-http = { workspace = true, optional = true }
velodex-policy = { workspace = true, optional = true }
velodex-identity = { workspace = true, optional = true }
velodex-storage = { workspace = true, optional = true }
velodex-upstream = { workspace = true, optional = true }
axum = { workspace = true, features = ["multipart"], optional = true }
tower-http = { workspace = true, optional = true }
http = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
blake2 = { workspace = true, optional = true }
csv = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
tantivy = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync", "rt", "fs"], optional = true }
tokio-util = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
moka = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }
zip = { workspace = true, optional = true }
tar = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
time = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tower = { workspace = true, features = ["util"] }
http-body-util.workspace = true
wiremock.workspace = true
tracing-subscriber.workspace = true
redb.workspace = true
insta.workspace = true
criterion = { workspace = true, features = ["async_tokio"] }

[[bench]]
name = "operations"
harness = false
required-features = ["serving"]

[lints]
workspace = true
