[package]
name = "velodex-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP layer for velodex: read-through simple-index serving and blob download."

[dependencies]
velodex-core.workspace = true
velodex-storage.workspace = true
velodex-upstream.workspace = true
axum = { workspace = true, features = ["multipart"] }
tower-http.workspace = true
http.workspace = true
bytes.workspace = true
base64.workspace = true
url.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "fs"] }
tokio-util.workspace = true
futures-util.workspace = true
moka = { workspace = true }
utoipa.workspace = true
zip.workspace = true
tar.workspace = true
flate2.workspace = true

[dev-dependencies]
tokio.workspace = true
tower = { workspace = true, features = ["util"] }
http-body-util.workspace = true
wiremock.workspace = true
tempfile.workspace = true

[lints]
workspace = true
