[package]
name = "velodex-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Ecosystem-neutral index policy engine for velodex: name allow/deny, size limits, and a rule seam."

[dependencies]
serde.workspace = true

[lints]
workspace = true
