[package]
name = "velodex-upstream"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Upstream index client for velodex: fetch and revalidate simple pages and files."

[dependencies]
reqwest.workspace = true
rustls.workspace = true
url.workspace = true
bytes.workspace = true
futures-core.workspace = true
futures-util.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true

[lints]
workspace = true
